# ios-egui

./: .gitignore  ANDROID_SETUP.md  Cargo.toml  PLUGINS.md  Package.swift  README.md  SESSION_HANDOFF.md
.cargo/: config.toml
EguiKit/Sources/EguiKit/: CameraController.swift  Capabilities.swift  EguiRenderer.swift  EguiView.swift  MetalHostView.swift  MicLevelMonitor.swift
EguiKit/Sources/EguiKitC/: dummy.c
crates/cargo-egui-android/: Cargo.toml
crates/cargo-egui-android/src/: lib.rs  main.rs
crates/cargo-egui-android/template/: Cargo.toml.tpl  gitignore.tpl  lib.rs.tpl
crates/cargo-egui-ios/: Cargo.toml
crates/cargo-egui-ios/shims/: codesign  xcrun
crates/cargo-egui-ios/src/: lib.rs  main.rs  plugin_cmd.rs
crates/cargo-egui-mobile/: Cargo.toml
crates/cargo-egui-mobile/src/: main.rs
crates/egui-android/: Cargo.toml
crates/egui-android/java/com/github/egui_mobile/: EguiImeBridge.java  EguiNativeActivity.java
crates/egui-android/src/: host.rs  ime_bridge.rs  lib.rs  plugins.rs  video.rs
crates/egui-ios/: Cargo.toml
crates/egui-ios/src/: __ffi.rs  host.rs  input.rs  lib.rs  plugins.rs  render_core.rs
crates/egui-mobile/: Cargo.toml
crates/egui-mobile-core/: Cargo.toml
crates/egui-mobile-core/src/: app.rs  host.rs  lib.rs
crates/egui-mobile/src/: lib.rs
crates/local-anima/: Cargo.toml
crates/local-anima/examples/: anima_txt2img.rs
crates/local-anima/src/: error.rs  img.rs  latent.rs  lib.rs  pack.rs  pipeline.rs  scheduler.rs  text.rs  tokenizer.rs
crates/local-anima/tests/: real_pack.rs
crates/local-clip/: Cargo.toml
crates/local-clip/src/: embed.rs  error.rs  img.rs  lib.rs  pack.rs  text.rs
crates/local-clip/tests/: fixture_tokenizer.json
crates/local-rewrite/: Cargo.toml
crates/local-rewrite/src/: error.rs  lib.rs  pack.rs  rewriter.rs  templates.rs
crates/local-sd/: Cargo.toml
crates/local-sd/src/: clip.rs  error.rs  img.rs  lib.rs  pipeline.rs  quant.rs  scheduler.rs  selftest.rs  text2img_selftest.rs  tokenizer.rs
crates/local-wd14/: Cargo.toml
crates/local-wd14/src/: error.rs  img.rs  lib.rs  pack.rs  tagger.rs
crates/plugin-abi/: Cargo.toml
crates/plugin-abi/src/: lib.rs  mastertech_style.json  net.rs  theme.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: devsync.rs  engine.rs  lib.rs  loader.rs  manager.rs  manager_ui.rs  net_ops.rs  ops.rs  paint.rs  plugin.rs  viewport.rs
crates/plugin-host/src/net_ops/: ssh.rs  tcp.rs
crates/plugin-host/tests/: host_roundtrip.rs  plugins_smoke.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/qnn-rs/: Cargo.toml  README.md  wrapper.h
crates/qnn-rs/examples/: anima_smoke.rs  clip_smoke.rs  dump_context.rs  vae_smoke.rs
crates/qnn-rs/scripts/: regen-bindings.sh
crates/qnn-rs/src/: bindings.rs  device.rs  error.rs  fastrpc.rs  htp.rs  lib.rs  loader.rs  parse.rs  quant.rs  types.rs
crates/qnn-rs/tests/: parse.rs
docs/: egui-mobile-plan.md
examples/android-hello/: Cargo.toml
examples/android-hello/src/: lib.rs
examples/comfyui-android/: .gitignore  Cargo.toml  README.md
examples/comfyui-android/qnn-runtime-libs/: .gitignore
examples/comfyui-android/src/: app.rs  apps.rs  backup.rs  clip_index.rs  cooc.rs  engine.rs  gallery.rs  graphview.rs  history.rs  icons.rs  lib.rs  lint.rs  local_engine.rs  logger.rs  mask.rs  player.rs  preflight.rs  schema.rs  sysmon.rs  tag_index.rs  tags.rs  theme.rs  types.rs  uiwf.rs  workflow.rs
examples/comfyui-android/src/apps_builtin/: eye_detailer.json  face_detailer.json  hand_detailer.json  hires_fix.json  sharpen.json  upscale_model.json  upscale_scale.json
examples/desktop-host/: Cargo.toml
examples/desktop-host/src/: main.rs
examples/hello/: Package.swift  xtool.yml
examples/hello/rust/: Cargo.toml
examples/plugins-android/: Cargo.toml
examples/plugins-android/src/: lib.rs
examples/plugins-ios/: Info.override.plist  Package.swift  xtool.yml
examples/plugins-ios/rust/: Cargo.toml
patches/: README.md
patches/cargo-apk2/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README-ZH.md  README.md
patches/ndk-build2/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
plugins-dist/com.example.devices/: manifest.toml  plugin.cwasm.key
plugins-dist/com.example.hello/: plugin.cwasm.key  plugin.wasm
plugins-dist/com.example.http/: manifest.toml  plugin.cwasm.key
plugins-dist/com.example.json/: manifest.toml  plugin.cwasm.key
plugins-dist/com.example.ratatui-demo/: manifest.toml  plugin.cwasm.key  plugin.wasm
plugins-dist/com.example.regex/: manifest.toml  plugin.cwasm.key
plugins-dist/com.example.terminal/: manifest.toml  plugin.cwasm.key  plugin.wasm
plugins-dist/com.wirelab.panel/: plugin.cwasm.key
plugins/devices/: Cargo.toml
plugins/devices/src/: lib.rs
plugins/hello-plugin/: Cargo.toml  manifest.toml
plugins/http-client/: Cargo.toml
plugins/http-client/src/: lib.rs
plugins/json-viewer/: Cargo.toml
plugins/json-viewer/src/: lib.rs
plugins/ratatui-demo/: Cargo.toml
plugins/ratatui-demo/src/: lib.rs  theme.rs
plugins/regex-tester/: Cargo.toml
plugins/rvim/: Cargo.toml  manifest.toml
plugins/rvim/src/: buffer.rs  explorer.rs  finder.rs  fs.rs  fuzz_probe.rs  help.rs  highlight.rs  lib.rs  render.rs  state.rs  theme.rs  ui.rs  vim.rs
plugins/terminal/: Cargo.toml
plugins/terminal/src/: calc.rs  editor.rs  lib.rs  render.rs  shell.rs  sshmode.rs  theme.rs  toolbar.rs  vt.rs
plugins/wirelab/: Cargo.toml  manifest.toml
plugins/wirelab/examples/: sim_board.rs
plugins/wirelab/src/: lib.rs  link.rs  view.rs
plugins/wirelab/tests/: e2e.rs  snapshot.rs
scripts/: adb-target.sh  d1-selftest.sh  d2-push-assets.sh  qnn-convert.sh  qnn-env.sh  qnn-push-model.sh  qnn-stage-libs.sh
scripts/clip-export/: README.md  export.py
scripts/rewriter-fetch/: README.md  fetch.sh
scripts/wd14-export/: README.md  export.py
template/: App.swift  Cargo.toml  Info.override.plist  Package.swift  gitignore  lib.rs  xtool.yml
template-plugin/: Cargo.toml  lib.rs  manifest.toml
(+24 files in other folders)
