[workspace]
resolver = "3"
members = [
    "crates/egui-mobile-core",
    "crates/egui-mobile",
    "crates/egui-ios",
    "crates/egui-android",
    "examples/android-hello",
    "examples/plugins-android",
    "examples/comfyui-android",
    "crates/cargo-egui-ios",
    "crates/cargo-egui-android",
    "crates/cargo-egui-mobile",
    "crates/plugin-abi",
    "crates/plugin-host",
    "crates/plugin-sdk",
    "crates/qnn-rs",
    "crates/local-sd",
    "crates/local-anima",
    "crates/local-wd14",
    "examples/hello/rust",
    "examples/desktop-host",
    "examples/plugins-ios/rust",
]
exclude = ["template", "template-plugin", "plugins", "patches/ndk-build2", "patches/cargo-apk2"]
# egui-android only builds for android targets (android-activity/eframe-android), so it is a
# member (buildable via `cargo ndk -p egui-android`) but excluded from the default host build.
default-members = [
    "crates/egui-mobile-core",
    "crates/egui-mobile",
    "crates/egui-ios",
    "crates/cargo-egui-ios",
    "crates/cargo-egui-android",
    "crates/cargo-egui-mobile",
    "crates/plugin-abi",
    "crates/plugin-host",
    "crates/plugin-sdk",
    "examples/hello/rust",
    "examples/desktop-host",
    "examples/plugins-ios/rust",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shadowbrok3r/egui-ios"

# winit/egui-winit call hide_soft_input(HIDE_IMPLICIT_ONLY) on every IME interrupt; with the
# egui-android EditText bridge that hide sticks (DecorView show is ignored). Skip implicit-only
# hides so the bridge owns keyboard dismiss.
[patch.crates-io]
android-activity = { path = "patches/android-activity" }

[workspace.dependencies]
egui = "0.35"
egui-wgpu = "0.35"
eframe = "0.35"
wgpu = "29"
pollster = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
postcard = { version = "1", features = ["use-std"] }
bytemuck = "1"
wasmtime = { version = "46", default-features = false, features = ["runtime", "cranelift", "pulley", "std"] }
wasmtime-wasi = "46"
anyhow = "1"
log = "0.4"
toml = "1"
egui-ios-plugin-abi = { path = "crates/plugin-abi" }
egui-ios-plugin-host = { path = "crates/plugin-host" }
egui-mobile-core = { path = "crates/egui-mobile-core" }
egui-ios = { path = "crates/egui-ios" }
egui-android = { path = "crates/egui-android" }
