[package]
name = "egui-ios"
description = "Runtime for building native egui iOS apps in Rust — render loop, FFI, and Swift capability bridge."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
pollster.workspace = true
# Non-optional: provides the shared default egui theme applied by the runtime.
egui-ios-plugin-abi.workspace = true
egui-ios-plugin-host = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }

[features]
# WASM plugin runtime: wasmtime engine, plugin viewport, dev sync, iOS host-op glue.
# Enables native network ops (`net.http.*`, `ssh.*`) via the host's `net` feature.
plugins = ["dep:egui-ios-plugin-host", "egui-ios-plugin-host/net", "dep:postcard"]

[lib]
# rlib so apps can depend on it; the app crate is the staticlib that exports the C ABI.
crate-type = ["rlib"]
