[package]
name = "local-sd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "On-device Stable Diffusion 1.5 text2img pipeline (CLIP on CPU, UNet/VAE on Qualcomm HTP via qnn-rs). Host-testable pure math; device paths compile everywhere."

[dependencies]
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = { workspace = true }
ndarray = "0.17.2"
qnn-rs = { path = "../qnn-rs" }
rand = "0.10.2"
rand_distr = "0.6.0"
thiserror = "2.0.19"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
