[package]
name = "local-wd14"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "On-device WD14 danbooru tagger: pure preprocessing (BGR NHWC pad) + postprocessing (thresholded ranked tags) host-testable; the classifier graph runs on the Qualcomm HTP via qnn-rs."

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
log = { workspace = true }
memmap2 = "0.9"
qnn-rs = { path = "../qnn-rs" }
thiserror = "2.0.19"
