[package]
name = "egui-ios-plugin-abi"
description = "Shared wire format between egui-ios plugin hosts and WASM plugin guests."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
egui = { workspace = true, features = ["serde", "bytemuck"] }
serde.workspace = true
serde_bytes.workspace = true
serde_json = "1"
postcard.workspace = true
bytemuck.workspace = true
