[package]
name = "qnn-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust dlopen wrapper for Qualcomm QNN (AI Engine Direct): parse SD context-binary metadata on host, execute on HTP NPU on device."

[dependencies]
libloading = "0.9.0"
thiserror = "2"
# setenv for prepare_htp_env (ADSP_LIBRARY_PATH etc.), visible to the native QNN/FastRPC loaders.
libc = "0.2"
# Diagnostics routed to logcat by the app's global android_logger.
log = { workspace = true }

[dev-dependencies]
memmap2 = "0.9"

[[example]]
name = "dump_context"
path = "examples/dump_context.rs"

[[example]]
name = "anima_smoke"
path = "examples/anima_smoke.rs"

[[example]]
name = "clip_smoke"
path = "examples/clip_smoke.rs"

[[example]]
name = "vae_smoke"
path = "examples/vae_smoke.rs"
