[package]
name = "android_hello"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
egui-mobile = { path = "../../crates/egui-mobile" }
egui = "0.35"

# cargo-apk2 reads this to generate the APK manifest.
[package.metadata.android]
package = "com.example.androidhello"
java_sources = "../../crates/egui-android/java"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application]
label = "Android Hello"
has_code = true

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"
[[package.metadata.android.uses_permission]]
name = "android.permission.REQUEST_INSTALL_PACKAGES"
[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"
[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

# EguiNativeActivity hosts a hidden EditText for real IME InputConnection (spacebar cursor).
[[package.metadata.android.application.activity]]
name = "com.github.egui_mobile.EguiNativeActivity"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|density"
window_soft_input_mode = "adjustResize"
[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "android_hello"
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]
