[package]
name = "comfyui_android"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Native HTTPS to a ComfyUI server behind TLS. Uses rustls with a bundled webpki-roots CA set and
# the ring provider — deliberately NOT reqwest's `rustls` feature, which forces
# rustls-platform-verifier (it needs Android Java helper classes we don't bundle, and panics
# uninitialized). Build with `cargo ndk ... --features tls`.
tls = ["reqwest/rustls-no-provider", "dep:rustls", "dep:webpki-roots"]

[dependencies]
egui-mobile = { path = "../../crates/egui-mobile" }
egui = "0.35"
# default-features off drops the websocket transport: rucomfyui can't attach the auth header to its
# progress ws, so an auth-gated server would reject it anyway — we poll /history instead.
rucomfyui = { git = "https://github.com/philpax/rucomfyui", default-features = false, features = ["typed_nodes"] }
# http-only by default: no TLS backend, so this cross-compiles cleanly. `tls` adds rustls below.
# gzip/brotli/deflate: a real proxy compresses the large object_info response; without these reqwest
# would hand the compressed bytes to the JSON parser.
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net"] }
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Log lines mirror to logcat (egui-android installs android_logger); `adb logcat -s comfyui`.
log = "0.4"
# TLS (feature `tls`): rustls + a static Mozilla CA bundle, so https verifies with no Android
# platform trust store / JNI. ring cross-compiles cleanly with the NDK.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }

# cargo-apk2 reads this to generate the APK manifest.
[package.metadata.android]
package = "com.example.comfyui"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

# Release installs are personal sideloads; sign with the auto-generated debug keystore.
[package.metadata.android.signing.release]
path = "/home/shadowbroker/.android/debug.keystore"
keystore_password = "android"

[package.metadata.android.application]
label = "ComfyUI"

# Launcher activity (NativeActivity loads libcomfyui_android.so via android-activity).
[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|density"
# adjustResize keeps the content rect tracking the IME so keyboard height is measurable.
window_soft_input_mode = "adjustResize"
[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "comfyui_android"
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"
