[package]
name = "comfyui_android"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Native HTTPS to a ComfyUI server behind TLS. Uses rustls with a bundled webpki-roots CA set and
# the ring provider — deliberately NOT reqwest's `rustls` feature, which forces
# rustls-platform-verifier (it needs Android Java helper classes we don't bundle, and panics
# uninitialized). Build with `cargo ndk ... --features tls`.
tls = [
    "reqwest/rustls-no-provider",
    "dep:rustls",
    "dep:webpki-roots",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
# On-device Qualcomm HTP NPU (D1/D2/D3 diagnostics + Create-tab Local NPU + WD14 Read tags). Off by
# default; pulls local-sd (SD1.5, candle CPU + qnn-rs), local-anima (Anima DiT packs) and local-wd14
# (WD14 tagger). Build with `cargo ndk ... --features tls,local-npu`.
local-npu = ["dep:local-sd", "dep:local-anima", "dep:local-wd14"]

[dependencies]
egui-mobile = { path = "../../crates/egui-mobile" }
egui = "0.35"
# default-features off drops the websocket transport: rucomfyui can't attach the auth header to its
# progress ws, so an auth-gated server would reject it anyway — we poll /history instead.
rucomfyui = { git = "https://github.com/philpax/rucomfyui", default-features = false, features = ["typed_nodes"] }
# The ComfyUI node graph editor (egui-snarl based); fed typed Objects built from our lenient schemas.
rucomfyui_node_graph = { git = "https://github.com/philpax/rucomfyui" }
# Direct snarl access for the graph presentation layer (view transform, selection, custom viewer).
egui-snarl = "0.11"
# bytes:// image loader for output images / previews rendered inside graph nodes.
egui_extras = { version = "0.35", default-features = false, features = ["image"] }
# http-only by default: no TLS backend, so this cross-compiles cleanly. `tls` adds rustls below.
# gzip/brotli/deflate: a real proxy compresses the large object_info response; without these reqwest
# would hand the compressed bytes to the JSON parser.
# `form`: comfy-gate's /login is an HTML form post (application/x-www-form-urlencoded), not JSON.
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "multipart", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
# Authenticated /ws listener for live progress + previews: rucomfyui's own websocket transport
# can't attach auth headers to the handshake, so the engine runs its own socket alongside polling.
tokio-tungstenite = "0.24"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Decompresses the bundled Danbooru tag dictionary (assets/tags/danbooru.csv.gz); rust_backend so it
# cross-compiles to the NDK with no system zlib.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Log lines mirror to logcat (egui-android installs android_logger); `adb logcat -s comfyui`.
log = "0.4"
# TLS (feature `tls`): rustls + a static Mozilla CA bundle, so https verifies with no Android
# platform trust store / JNI. ring cross-compiles cleanly with the NDK.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }
# On-device SD1.5 / D1 NPU self-test (feature `local-npu`). Heavy (candle); kept optional.
local-sd = { path = "../../crates/local-sd", optional = true }
# On-device Anima DiT text2img (feature `local-npu`): 1024² packs on the HTP.
local-anima = { path = "../../crates/local-anima", optional = true }
# On-device WD14 danbooru tagger (feature `local-npu`): a `wd14/` pack on the HTP for Read tags.
local-wd14 = { path = "../../crates/local-wd14", optional = true }

[dev-dependencies]
skrifa = "0.42"

# cargo-apk2 reads this to generate the APK manifest.
[package.metadata.android]
package = "com.example.comfyui"
# Hidden EditText InputConnection (Gboard spacebar trackpad) — shared with egui-android.
java_sources = "../../crates/egui-android/java"
# QNN HTP NPU libs (qnn-rs D1). Proprietary QAIRT .so are NOT in-repo; scripts/qnn-stage-libs.sh
# populates qnn-runtime-libs/arm64-v8a/ before deploy. cargo-apk2 bundles `<folder>/arm64-v8a/*.so`
# into the APK's lib/arm64-v8a/. From /path/to/qairt/<ver>/:
#   lib/aarch64-android/libQnnHtp.so          — HTP backend (Backend::load target)
#   lib/aarch64-android/libQnnSystem.so       — metadata parse (QnnSystem::load target)
#   lib/aarch64-android/libQnnHtpV81Stub.so   — V81 CPU-side stub (S26 Ultra / SM8850 / HTP V81)
#   lib/aarch64-android/libQnnHtpPrepare.so   — optional (only for on-device graph prepare)
#   lib/hexagon-v81/unsigned/libQnnHtpV81Skel.so — the DSP skel (FastRPC loads it on the NSP)
#   <NDK>/.../sysroot/usr/lib/aarch64-linux-android/libc++_shared.so — QNN links the C++ runtime
# runtime_libs only applies at APK package time, so `cargo ndk check` passes even when the folder
# is empty/missing; scripts/qnn-stage-libs.sh must populate it before `cargo egui-mobile run`.
runtime_libs = "qnn-runtime-libs"
# The skel must be a real file on disk for FastRPC to load it, so the APK sets
# android:extractNativeLibs="true" (see [package.metadata.android.application]). Before loading
# libQnnHtp.so, call qnn_rs::prepare_htp_env(native_lib_dir) to point
# ADSP_LIBRARY_PATH/DSP_LIBRARY_PATH/LD_LIBRARY_PATH at it (skel_dir = nativeLibraryDir).

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

# Release installs are personal sideloads; sign with the auto-generated debug keystore.
[package.metadata.android.signing.release]
path = "/home/shadowbroker/.android/debug.keystore"
keystore_password = "android"

[package.metadata.android.application]
label = "ComfyUI"
has_code = true
# Unpack bundled .so to nativeLibraryDir so FastRPC can load libQnnHtpV81Skel.so from a real path.
extract_native_libs = true
# Vendor FastRPC (CDSP). Required on targetSdk 31+ so enable_unsigned_pd can dlopen it
# before HTP loads the unsigned skel (without this: deviceCreate 0x36b1 / QnnDsp err 4000).
[[package.metadata.android.application.uses_native_library]]
name = "libcdsprpc.so"
required = false

# EguiNativeActivity hosts a hidden EditText for real IME InputConnection (spacebar cursor).
[[package.metadata.android.application.activity]]
name = "com.github.egui_mobile.EguiNativeActivity"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|density"
# adjustResize keeps the content rect tracking the IME so keyboard height is measurable.
window_soft_input_mode = "adjustResize"
[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "comfyui_android"
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"
# Read the device photo gallery for the LoadImage "Device" picker. READ_MEDIA_IMAGES is the
# Android 13+ (API 33) scoped permission; READ_EXTERNAL_STORAGE covers older devices only.
[[package.metadata.android.uses_permission]]
name = "android.permission.READ_MEDIA_IMAGES"
[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"
max_sdk_version = 32
