[package]
name = "plugins_android"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
egui-android = { path = "../../crates/egui-android", features = ["plugins"] }
egui = "0.35"

[package.metadata.android]
package = "com.example.pluginsandroid"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application]
label = "Plugins Android"

# Launcher activity (NativeActivity loads libplugins_android.so via android-activity).
[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|density"
[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "plugins_android"
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"
