[package]
name = "ratatui_demo"
edition = "2024"
version = "0.1.0"
publish = false

[dependencies]
egui-ios-plugin-sdk = { path = "../../crates/plugin-sdk" }
ratatui = { version = "0.30.2", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true

[workspace]
